revisão do build

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,6 +2,7 @@ version: '3.4'
 
 services:
   external.paymentgateway:
+    image: ${DOCKER_REGISTRY-}externalpaymentgateway
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
