--- a/docker-compose.prd.yml
+++ b/docker-compose.prd.yml
@@ -2,12 +2,13 @@ version: '3.4'
 
 services:
   external.paymentgateway:
+    image: externalpaymentgateway:${BRANCH_NAME}
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
     ports:
-      - "80:80"
+      - "80"
 
   mongo:
     ports:
-      - "27017:27017"
+      - "27017"
     
