--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 
 services:
-  external.paymentgateway:
+  external_paymentgateway:
     image: ${DOCKER_REGISTRY-}externalpaymentgateway
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
