--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 
 services:
-  external.paymentgateway:    
+  external_paymentgateway:
     build:
       context: .
       dockerfile: External.PaymentGateway/Dockerfile
