--- a/docker-compose.prd.yml
+++ b/docker-compose.prd.yml
@@ -2,18 +2,55 @@ version: '3.4'
 
 services:
   external_paymentgateway:
-    image: externalpaymentgateway:${BRANCH_NAME}
+    depends_on:
+    - message_broker
+    - mongo
     environment:
-      - ASPNETCORE_ENVIRONMENT=Production
+      ASPNETCORE_ENVIRONMENT: Production
+    image: 'externalpaymentgateway:master'
+    networks:
+      external_payment_net: {}
     ports:
-      - "80"
+    - target: 80
+    deploy:
+      mode: replicated
+      replicas: 20
+      update_config:
+        parallelism: 2
+        delay: 10s
+        order: stop-first
 
   message_broker:
+    container_name: rabbitmq_teste
+    environment:
+      RABBITMQ_DEFAULT_PASS: password
+      RABBITMQ_DEFAULT_USER: user
+    image: rabbitmq:3.8-management
+    networks:
+      external_payment_net: {}
     ports:
-      - "15672"
+    - target: 15672
+    volumes:
+    - rabbitmq_data:/var/lib/rabbitmq:rw
 
 
   mongo:
+    environment:
+      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_USERNAME: root
+    image: mongo:4.2.6
+    networks:
+      external_payment_net: {}
     ports:
-      - "27017"
-    
+    - target: 27017
+    volumes:
+    - mongo_data:/data/db:rw
+
+
+volumes:
+  mongo_data: {}
+  rabbitmq_data: {}
+
+networks:
+  external_payment_net:
+    driver: overlay
